# SimplePlatformer

./: CMakeLists.txt  SimplePlatformer.cpp  templateClass.cpp
include/: AnimationEntity.h  Engine.h  Game.h  GraphicsStructures.h  Level.h  ObjectEntity.h  Player.h  Tile.h  templateClass.h
src/: AnimationEntity.cpp  Engine.cpp  Game.cpp  GraphicsStructures.cpp  Level.cpp  ObjectEntity.cpp  Player.cpp  Tile.cpp
